Adjust the padding to fix the spacing issue in the codeblock

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -165,7 +165,7 @@ pre {
   font-family: $font-family-mono;
   font-size: 15px;
   background-color: $accent-color;
-  padding: $spacing-medium;
+  padding: 10px $spacing-medium 10px;
   border-radius: 4px;
   overflow-x: auto;
   margin-bottom: $spacing-medium;
